first unitary test + other updates

--- a/material-iron-router-web/client/nav.html
+++ b/material-iron-router-web/client/nav.html
@@ -3,7 +3,7 @@
     <div class="container">
       <div class="nav-wrapper">
         <a href="{{pathFor 'home'}}" class="brand-logo">
-          <img alt="UserAccounts" width="25" height="25" src="/imgs/ua-logo.png">
+            <!--<img alt="UserAccounts" width="25" height="25" src="/imgs/ua-logo.png">-->
         </a>
         <ul class="right hide-on-med-and-down">
           <li class="{{isActiveRoute regex='home'}}"><a href="{{pathFor 'home'}}">Accueil</a></li>
