--- a/material-iron-router-web/client/nav.html
+++ b/material-iron-router-web/client/nav.html
@@ -7,14 +7,13 @@
         </a>
         <ul class="right hide-on-med-and-down">
           <li class="{{isActiveRoute regex='home'}}"><a href="{{pathFor 'home'}}">Accueil</a></li>
-          <li class="{{isActiveRoute regex='showRoutes'}}"><a href="{{pathFor 'showRoutes'}}">Afficher les routes</a></li>
+          <li class="{{isActiveRoute regex='routes'}}"><a href="{{pathFor 'routes'}}">Routage</a></li>
           {{#if isInRole 'admin'}}
-          <li class="{{isActiveRoute regex='addRoutes'}}"><a href="{{pathFor 'addRoutes'}}">Ajouter les routes</a></li>
           <li class="{{isActiveRoute regex='manageUsers'}}"><a href="{{pathFor 'manageUsers'}}">Gestion des utilisateurs</a></li>
           {{/if}}
 	  {{#if isInRole 'admin,normal'}}
  	  <li class="{{isActiveRoute regex='settings'}}"><a href="{{pathFor 'settings'}}">Parametrages</a></li>
-          {{/if}}     
+          {{/if}}
           <li>{{> atNavButton }}</li>
         </ul>
         <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
