--- a/material-iron-router-web/client/nav.html
+++ b/material-iron-router-web/client/nav.html
@@ -6,7 +6,6 @@
           <img alt="UserAccounts" width="25" height="25" src="/imgs/ua-logo.png">
         </a>
         <ul class="right hide-on-med-and-down">
-          <li class="{{isActiveRoute regex='home'}}"><a href="{{pathFor 'home'}}">Accueil</a></li>
           <li class="{{isActiveRoute regex='routes'}}"><a href="{{pathFor 'routes'}}">Routage</a></li>
           {{#if isInRole 'admin'}}
           <li class="{{isActiveRoute regex='users'}}"><a href="{{pathFor 'users'}}">Gestion des utilisateurs</a></li>
@@ -16,6 +15,12 @@
           {{/if}}
           <li>{{> atNavButton }}</li>
         </ul>
+
+	
+	<ul class="left hide-on-med-and-down">
+          <li class="{{isActiveRoute regex='home'}}"><a href="{{pathFor 'home'}}">Accueil</a></li>
+	</ul> 
+
         <a class="button-collapse" href="#" data-activates="nav-mobile"><i class="mdi-navigation-menu"></i></a>
       </div>
     </div>
